// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipes: filterPipe should be case insensitive 1`] = `
Array [
  Object {
    "first": "john",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
]
`;

exports[`pipes: filterPipe should filter data by value 1`] = `
Array [
  Object {
    "first": "john",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
]
`;

exports[`pipes: filterPipe should return data if no string to match 1`] = `
Array [
  Object {
    "first": "john",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
  Object {
    "first": "Jane",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
  Object {
    "first": "Jill",
    "last": "Day",
    "status": "SAD_LNG",
  },
]
`;

exports[`pipes: filterPipe should reverse filter 1`] = `
Array [
  Object {
    "first": "Jane",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
  Object {
    "first": "Jill",
    "last": "Day",
    "status": "SAD_LNG",
  },
]
`;

exports[`pipes: filterPipe should use translated value 1`] = `
Array [
  Object {
    "first": "john",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
  Object {
    "first": "Jane",
    "last": "Doe",
    "status": "HAPPY_LNG",
  },
]
`;
